appId: com.onboarding.app
---
- assertVisible: 'Refetch Users'
- scroll
- tapOn: 'Refetch Users'
